kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-service
  namespace: http-request-hpa

spec:
  type: ClusterIP

  selector:
    app: nodejs-app

  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 3000
